# siphon

./: .gitignore  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  package.json
.github/workflows/: release.yml
renderer/: app.js  index.html  quicksave.html  quicksave.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  sniffer.json
src-tauri/icons/: icon.icns
src-tauri/src/: downloader.rs  engine.rs  lib.rs  main.rs  sniffer.rs
